<resources>
    <string name="app_name">NanoAndroid</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="app1_name">Popular Movies</string>
    <string name="app2_name">Stock Hawk</string>
    <string name="app3_name">Build it Bigger</string>
    <string name="app4_name">Make Your App Material</string>
    <string name="app5_name">Go Ubiquitous</string>
    <string name="app6_name">Capstone</string>
</resources>
